# umkacxx

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  options.cmake  readme.md
packaging/: umkacxx.pc.in
src/: CMakeLists.txt  core.cpp  types.cpp  umkacxx.cpp
tests/: CMakeLists.txt
tests/hook/: cppfuncs.cpp  fn.cpp  fn_wrap.um  hooktest.cpp  hooktest.um  main.cpp  main.um
tests/return/: main.cpp  test.cpp  test.um
tests/setter/: main.cpp  main.um  mod.um  setter_test.cpp
