cmake_minimum_required(VERSION 4.4)
set(CMAKE_EXPERIMENTAL_EXPORT_PACKAGE_DEPENDENCIES "1942b4fa-b2c5-4546-9385-83f254070067")
set(CMAKE_EXPERIMENTAL_MAPPED_PACKAGE_INFO "ababa1b5-7099-495f-a9cd-e22d38f274f2")
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "f35a9ac6-8463-4d38-8eec-5d6008153e7d")
set(CMAKE_EXPERIMENTAL_EXPORT_BUILD_DATABASE "70ef007e-b743-492d-9407-e35eeac03a40")
set(CMAKE_EXPERIMENTAL_GENERATE_SBOM "248471c2-d905-4c9e-81b5-b89cd27965e1")
set(CMAKE_EXPERIMENTAL_RUST "b6fdddce-bf66-41a5-bc5f-077f6fa4d2a1")
project(
    umkacxx
    VERSION 0.0.0
    DESCRIPTION "Umka CXX Wrapper"
    LANGUAGES C CXX
)
set(CMAKE_EXPERIMENTAL_FIND_CPS_PACKAGES ON)
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 23)
set(CMAKE_C_EXTENSIONS ON)
include(FetchContent)
include(GNUInstallDirs)
include(CTest)

include(options.cmake)
add_subdirectory(src)
if (BUILD_TESTS)
    add_subdirectory(tests)
endif()
